Design section paper

--- a/paper.bib
+++ b/paper.bib
@@ -26,6 +26,21 @@
   year={2011}
 }
 
+@article{velasco2011constructing,
+  title={Constructing an invertible constant-Q transform with non-stationary Gabor frames},
+  author={{Velasco, Gino Angelo and Holighaus, Nicki and D{\"o}rfler, Monika and Grill, Thomas}},
+  journal={Proceedings of DAFX11, Paris},
+  volume={33},
+  year={2011}
+}
+
+@inproceedings{six2014tarsosdsp,
+  author      = {Joren Six and Olmo Cornelis and Marc Leman},
+  title       = {{TarsosDSP, a Real-Time Audio Processing Framework in Java}},
+  booktitle   = {{Proceedings of the 53rd AES Conference (AES 53rd)}},
+  year        =  2014
+}
+
 @inproceedings{herre2002scalable,
   title={Scalable robust audio fingerprinting using MPEG-7 content description},
   author={Herre, J{\"u}rgen and Hellmuth, Oliver and Cremer, Markus},
